force-app/main/default/objects/Bulk_Job_Settled__e/fields/Error_Summary__c.field-meta.xml
<CustomField>
    <fullName>Error_Summary__c</fullName>
    <label>Error Summary</label>
    <length>30000</length>
    <type>LongTextArea</type>
</CustomField>