force-app/main/default/objects/Bulk_Job_Settled__e/fields/Records_Failed__c.field-meta.xml
<CustomField>
    <fullName>Records_Failed__c</fullName>
    <label>Records Failed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>