force-app/main/default/objects/Bulk_Job_Settled__e/fields/Records_Succeeded__c.field-meta.xml
<CustomField>
    <fullName>Records_Succeeded__c</fullName>
    <label>Records Succeeded</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>